# Fluxara-Store

./: .gitignore  ARCHITECTURE.md  Cargo.toml  IMPLEMENTATION.md  LICENSE-APACHE  QUICKSTART.md  README.md  config.toml.example
.github/: PR_SUMMARY.md
.github/workflows/: ci.yml
crates/fluxara-appstream/: Cargo.toml
crates/fluxara-appstream/src/: lib.rs
crates/fluxara-builder/: Cargo.toml
crates/fluxara-builder/src/: lib.rs
crates/fluxara-cli/: Cargo.toml
crates/fluxara-cli/src/: main.rs
crates/fluxara-converter/: Cargo.toml
crates/fluxara-converter/src/: lib.rs
crates/fluxara-core/: Cargo.toml
crates/fluxara-core/src/: config.rs  lib.rs  models.rs  traits.rs
crates/fluxara-daemon/: Cargo.toml
crates/fluxara-daemon/src/: lib.rs  main.rs
crates/fluxara-drivers/: Cargo.toml
crates/fluxara-drivers/src/: lib.rs
crates/fluxara-maintenance/: Cargo.toml
crates/fluxara-maintenance/src/: lib.rs
crates/fluxara-polkit-agent/: Cargo.toml
crates/fluxara-polkit-agent/src/: lib.rs
crates/fluxara-provider-apt/: Cargo.toml
crates/fluxara-provider-apt/src/: lib.rs
crates/fluxara-provider-flatpak/: Cargo.toml
crates/fluxara-provider-flatpak/src/: lib.rs
crates/fluxara-provider-pacman/: Cargo.toml
crates/fluxara-provider-pacman/src/: lib.rs
crates/fluxara-ui-gtk/: Cargo.toml
crates/fluxara-ui-gtk/src/: app.rs  main.rs  window.rs
