[workspace]
resolver = "2"
members = [
    "crates/fluxara-core",
    "crates/fluxara-provider-flatpak",
    "crates/fluxara-provider-apt",
    "crates/fluxara-provider-pacman",
    "crates/fluxara-converter",
    "crates/fluxara-builder",
    "crates/fluxara-drivers",
    "crates/fluxara-maintenance",
    "crates/fluxara-appstream",
    "crates/fluxara-daemon",
    "crates/fluxara-polkit-agent",
    "crates/fluxara-ui-gtk",
    "crates/fluxara-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Fluxara Store Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/linuxiano85/Fluxara-Store"

[workspace.dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
toml = "0.8"
