[package]
name = "fluxara-appstream"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
fluxara-core = { path = "../fluxara-core" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
