[package]
name = "fluxara-builder"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
fluxara-core = { path = "../fluxara-core" }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
