[package]
name = "fluxara-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "fluxara"
path = "src/main.rs"

[dependencies]
fluxara-core = { path = "../fluxara-core" }
fluxara-provider-flatpak = { path = "../fluxara-provider-flatpak" }
anyhow = { workspace = true }
tokio = { workspace = true }
