[package]
name = "fluxara-ui-gtk"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "fluxara-store"
path = "src/main.rs"

[dependencies]
fluxara-core = { path = "../fluxara-core" }
anyhow = { workspace = true }
gtk4 = "0.7"
libadwaita = "0.5"
